fixed an animation issue where the featured panels' hover animations were being clipped by height

--- a/src/pages/Home/Home.module.css
+++ b/src/pages/Home/Home.module.css
@@ -28,7 +28,6 @@
   display: flex;
   padding: 32px;
   padding-right: 0;
-  padding-top: 0;
   gap: 32px;
   width: 100%;
   overflow-x: scroll;
